New recipe design added

--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -8,14 +8,124 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="27f42" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="27f42" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13149860"/>
+          <foreground color="-13149860"/>
+        </properties>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="c249f" class="javax.swing.JLabel" binding="AddNewRecipeLbl">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-3735570"/>
+              <font name="Bookman Old Style" size="22" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Add new recipe"/>
+            </properties>
+          </component>
+          <hspacer id="e5b1a">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <vspacer id="62714">
+            <constraints>
+              <grid row="1" column="1" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <component id="87049" class="javax.swing.JLabel" binding="RecipeNameLbl">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-3735570"/>
+              <foreground color="-3735570"/>
+              <text value="Recipe name"/>
+            </properties>
+          </component>
+          <component id="292c6" class="javax.swing.JTextField" binding="RecipeNameTf">
+            <constraints>
+              <grid row="2" column="0" row-span="4" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="12" style="0"/>
+            </properties>
+          </component>
+          <component id="d0854" class="javax.swing.JLabel" binding="FreeLbl">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-3735570"/>
+              <font name="Bookman Old Style" size="14" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Free"/>
+            </properties>
+          </component>
+          <component id="e0a8e" class="javax.swing.JLabel" binding="GlutenFreeLbl">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="12" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Gluten free"/>
+            </properties>
+          </component>
+          <component id="f9d8b" class="javax.swing.JLabel" binding="MilfFreeLbl">
+            <constraints>
+              <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="12" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Milk free"/>
+            </properties>
+          </component>
+          <component id="ff107" class="javax.swing.JLabel" binding="VeganLbl">
+            <constraints>
+              <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="12" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Vegan"/>
+            </properties>
+          </component>
+          <component id="de14b" class="javax.swing.JCheckBox" binding="GlutenFreeCb">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="c3d05" class="javax.swing.JCheckBox" binding="MilkFreeCb">
+            <constraints>
+              <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="cf285" class="javax.swing.JCheckBox" binding="VeganCb">
+            <constraints>
+              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
       </grid>
     </children>
   </grid>
