--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -3,10 +3,13 @@
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="534" height="398"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <background color="-13149860"/>
+      <foreground color="-13149860"/>
+    </properties>
+    <border type="none" title="New recipe"/>
     <children>
       <grid id="27f42" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
@@ -19,9 +22,9 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="c249f" class="javax.swing.JLabel" binding="AddNewRecipeLbl">
+          <component id="c249f" class="javax.swing.JLabel" binding="addNewRecipeLbl">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="4" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-3735570"/>
@@ -40,19 +43,20 @@
               <grid row="1" column="1" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="87049" class="javax.swing.JLabel" binding="RecipeNameLbl">
+          <component id="87049" class="javax.swing.JLabel" binding="recipeNameLbl">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-3735570"/>
+              <font name="Bookman Old Style" size="14" style="0"/>
               <foreground color="-3735570"/>
               <text value="Recipe name"/>
             </properties>
           </component>
-          <component id="292c6" class="javax.swing.JTextField" binding="RecipeNameTf">
+          <component id="292c6" class="javax.swing.JTextField" binding="recipeNameTf">
             <constraints>
-              <grid row="2" column="0" row-span="4" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -60,9 +64,9 @@
               <font name="Bookman Old Style" size="12" style="0"/>
             </properties>
           </component>
-          <component id="d0854" class="javax.swing.JLabel" binding="FreeLbl">
+          <component id="d0854" class="javax.swing.JLabel" binding="freeLbl">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-3735570"/>
@@ -71,7 +75,7 @@
               <text value="Free"/>
             </properties>
           </component>
-          <component id="e0a8e" class="javax.swing.JLabel" binding="GlutenFreeLbl">
+          <component id="e0a8e" class="javax.swing.JLabel" binding="glutenFreeLbl">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -81,7 +85,7 @@
               <text value="Gluten free"/>
             </properties>
           </component>
-          <component id="f9d8b" class="javax.swing.JLabel" binding="MilfFreeLbl">
+          <component id="f9d8b" class="javax.swing.JLabel" binding="milfFreeLbl">
             <constraints>
               <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -91,7 +95,7 @@
               <text value="Milk free"/>
             </properties>
           </component>
-          <component id="ff107" class="javax.swing.JLabel" binding="VeganLbl">
+          <component id="ff107" class="javax.swing.JLabel" binding="veganLbl">
             <constraints>
               <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -101,7 +105,7 @@
               <text value="Vegan"/>
             </properties>
           </component>
-          <component id="de14b" class="javax.swing.JCheckBox" binding="GlutenFreeCb">
+          <component id="de14b" class="javax.swing.JCheckBox" binding="glutenFreeCb">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -109,7 +113,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="c3d05" class="javax.swing.JCheckBox" binding="MilkFreeCb">
+          <component id="c3d05" class="javax.swing.JCheckBox" binding="milkFreeCb">
             <constraints>
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -117,12 +121,59 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="cf285" class="javax.swing.JCheckBox" binding="VeganCb">
+          <component id="cf285" class="javax.swing.JCheckBox" binding="veganCb">
             <constraints>
               <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value=""/>
+            </properties>
+          </component>
+          <component id="5181e" class="javax.swing.JLabel" binding="ingredientsLbl">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="14" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Ingredients"/>
+            </properties>
+          </component>
+          <component id="58bd2" class="javax.swing.JList" binding="ingredientsList">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="8" fill="2" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-13610925"/>
+              <dropMode value="USE_SELECTION"/>
+              <font name="Bookman Old Style" size="12" style="0"/>
+              <foreground color="-13610925"/>
+              <model/>
+              <selectionBackground color="-3735570"/>
+            </properties>
+          </component>
+          <component id="1dc88" class="javax.swing.JLabel" binding="directionsLbl">
+            <constraints>
+              <grid row="4" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="14" style="0"/>
+              <foreground color="-3735570"/>
+              <text value="Directions"/>
+            </properties>
+          </component>
+          <component id="53c21" class="javax.swing.JTextArea" binding="directionsTa">
+            <constraints>
+              <grid row="5" column="2" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-13610925"/>
+              <font name="Bookman Old Style" size="12" style="0"/>
+              <foreground color="-13610925"/>
             </properties>
           </component>
         </children>
