--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.NewRecipe">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="534" height="398"/>
@@ -178,6 +178,15 @@
           </component>
         </children>
       </grid>
+      <component id="41f5c" class="javax.swing.JButton" binding="uploadB">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-3735570"/>
+          <text value="Upload"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
