--- a/Code/JAVA/Recipes/src/recipes_gui/SearchByIngredients.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/SearchByIngredients.form
@@ -224,7 +224,7 @@
                   </grid>
                 </children>
               </grid>
-              <grid id="6a997" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="6a997" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="10" left="30" bottom="10" right="30"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -243,6 +243,16 @@
                       <font name="Bookman Old Style" size="16" style="0"/>
                       <foreground color="-16169912"/>
                       <text value="Search"/>
+                    </properties>
+                  </component>
+                  <component id="c70b" class="javax.swing.JButton" binding="Home_page">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font name="Bookman Old Style" size="14" style="0"/>
+                      <foreground color="-16169912"/>
+                      <text value="Go back"/>
                     </properties>
                   </component>
                 </children>
