--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.NewRecipe">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="534" height="398"/>
+      <xy x="20" y="20" width="559" height="478"/>
     </constraints>
     <properties>
       <background color="-13149860"/>
@@ -183,8 +183,19 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <foreground color="-3735570"/>
+          <font name="Bookman Old Style" size="14" style="0"/>
+          <foreground color="-16169912"/>
           <text value="Upload"/>
+        </properties>
+      </component>
+      <component id="288b8" class="javax.swing.JButton" binding="HomePage">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Bookman Old Style" size="14" style="0"/>
+          <foreground color="-16169912"/>
+          <text value="Go back"/>
         </properties>
       </component>
     </children>
