--- a/Code/JAVA/Recipes/src/recipes_gui/Recipes.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/Recipes.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-13149860"/>
+      <foreground color="-13149860"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="9616d" class="javax.swing.JButton" binding="button1" default-binding="true">
