--- a/Code/JAVA/Recipes/src/recipes_gui/SelectedRecipes.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/SelectedRecipes.form
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.SelectedRecipes">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-13149860"/>
+      <foreground color="-13149860"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="9616d" class="javax.swing.JButton" binding="button1" default-binding="true">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Button"/>
-        </properties>
-      </component>
       <hspacer id="91dd1">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <vspacer id="71f54">
@@ -26,6 +21,51 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="e100c" class="javax.swing.JLabel" binding="RecipesLbl">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13149860"/>
+          <font name="Bookman Old Style" size="16" style="0"/>
+          <text value="Recipes"/>
+        </properties>
+      </component>
+      <component id="a00f8" class="javax.swing.JList" binding="recipesList">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="2" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-13610925"/>
+          <dropMode value="USE_SELECTION"/>
+          <font name="Bookman Old Style" size="12" style="0"/>
+          <foreground color="-13610925"/>
+          <model/>
+          <selectionBackground color="-3735570"/>
+        </properties>
+      </component>
+      <component id="602a4" class="javax.swing.JButton" binding="homePage">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Bookman Old Style" size="14" style="0"/>
+          <foreground color="-16169912"/>
+          <text value="Go back"/>
+        </properties>
+      </component>
+      <component id="27ad0" class="javax.swing.JButton" binding="goRecipeBtn">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Bookman Old Style" size="14" style="0"/>
+          <foreground color="-16169912"/>
+          <text value="Go to the recipe"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
