--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.NewRecipe">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="newRecipe_panel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
       <xy x="20" y="20" width="559" height="478"/>
     </constraints>
@@ -9,7 +9,9 @@
       <background color="-13149860"/>
       <foreground color="-13149860"/>
     </properties>
-    <border type="none" title="New recipe"/>
+    <border type="none" title="">
+      <title-color color="-4473925"/>
+    </border>
     <children>
       <grid id="27f42" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
@@ -149,7 +151,7 @@
               <background color="-13610925"/>
               <dropMode value="USE_SELECTION"/>
               <font name="Bookman Old Style" size="12" style="0"/>
-              <foreground color="-13610925"/>
+              <foreground color="-6882305"/>
               <model/>
               <selectionBackground color="-3735570"/>
             </properties>
@@ -173,12 +175,12 @@
             <properties>
               <background color="-13610925"/>
               <font name="Bookman Old Style" size="12" style="0"/>
-              <foreground color="-13610925"/>
+              <foreground color="-6947585"/>
             </properties>
           </component>
         </children>
       </grid>
-      <component id="41f5c" class="javax.swing.JButton" binding="uploadB">
+      <component id="41f5c" class="javax.swing.JButton" binding="upload_btn">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -188,7 +190,7 @@
           <text value="Upload"/>
         </properties>
       </component>
-      <component id="288b8" class="javax.swing.JButton" binding="HomePage">
+      <component id="288b8" class="javax.swing.JButton" binding="homepage_btn">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
