--- a/Code/JAVA/Recipes/src/recipes_gui/WelcomePage.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/WelcomePage.form
@@ -51,7 +51,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="1dd68" class="javax.swing.JButton" binding="SearchRecipe">
+          <component id="1dd68" class="javax.swing.JButton" binding="searchrecipe_btn">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -61,7 +61,7 @@
               <text value="Search for a recipe"/>
             </properties>
           </component>
-          <component id="5a693" class="javax.swing.JButton" binding="NewRecipe">
+          <component id="5a693" class="javax.swing.JButton" binding="newrecipe_btn">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
