--- a/Code/JAVA/Recipes/src/recipes_gui/RecipeDescription.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/RecipeDescription.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.RecipeDescription">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="recipeDirections_panel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -184,14 +184,14 @@
               <foreground color="-13610925"/>
             </properties>
           </component>
-          <component id="6dea2" class="javax.swing.JButton" binding="Home_page">
+          <component id="6dea2" class="javax.swing.JButton" binding="homePage_btn">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font name="Bookman Old Style" size="14" style="0"/>
               <foreground color="-16169912"/>
-              <text value="Go back"/>
+              <text value="Home page"/>
             </properties>
           </component>
         </children>
