--- a/Code/JAVA/Recipes/src/recipes_gui/SearchByIngredients.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/SearchByIngredients.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.SearchByIngredients">
-  <grid id="27dc6" binding="NewRecipe" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="searchByIngredients_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -235,7 +235,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="c28ae" class="javax.swing.JButton" binding="SearchButton">
+                  <component id="c28ae" class="javax.swing.JButton" binding="search_btn">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -245,14 +245,14 @@
                       <text value="Search"/>
                     </properties>
                   </component>
-                  <component id="c70b" class="javax.swing.JButton" binding="Home_page">
+                  <component id="c70b" class="javax.swing.JButton" binding="homePage_btn">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <font name="Bookman Old Style" size="14" style="0"/>
                       <foreground color="-16169912"/>
-                      <text value="Go back"/>
+                      <text value="Home page"/>
                     </properties>
                   </component>
                 </children>
