--- a/Code/JAVA/Recipes/src/recipes_gui/SelectedRecipes.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/SelectedRecipes.form
@@ -46,14 +46,14 @@
           <text value="Go to the recipe"/>
         </properties>
       </component>
-      <component id="602a4" class="javax.swing.JButton" binding="homePage">
+      <component id="602a4" class="javax.swing.JButton" binding="homepage_btn">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Bookman Old Style" size="14" style="0"/>
           <foreground color="-16169912"/>
-          <text value="Go back"/>
+          <text value="Home page"/>
         </properties>
       </component>
     </children>
