--- a/Code/JAVA/Recipes/src/recipes_gui/WelcomePage.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/WelcomePage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="recipes_gui.WelcomePage">
-  <grid id="27dc6" binding="WelcomePage" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="WelcomePage_panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
       <xy x="20" y="20" width="486" height="400"/>
@@ -51,7 +51,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="1dd68" class="javax.swing.JButton" binding="searchrecipe_btn">
+          <component id="1dd68" class="javax.swing.JButton" binding="searchRecipe_btn">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -61,7 +61,7 @@
               <text value="Search for a recipe"/>
             </properties>
           </component>
-          <component id="5a693" class="javax.swing.JButton" binding="newrecipe_btn">
+          <component id="5a693" class="javax.swing.JButton" binding="newRecipe_btn">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
