Simple visual design

--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -58,7 +58,7 @@
           </component>
           <component id="292c6" class="javax.swing.JTextField" binding="recipeNameTf">
             <constraints>
-              <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -112,6 +112,11 @@
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <autoscrolls value="false"/>
+              <borderPainted value="false"/>
+              <borderPaintedFlat value="false"/>
+              <contentAreaFilled value="false"/>
+              <foreground color="-4473925"/>
               <text value=""/>
             </properties>
           </component>
@@ -120,6 +125,7 @@
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <contentAreaFilled value="false"/>
               <text value=""/>
             </properties>
           </component>
@@ -128,6 +134,7 @@
               <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <contentAreaFilled value="false"/>
               <text value=""/>
             </properties>
           </component>
