--- a/Code/JAVA/Recipes/src/recipes_gui/SelectedRecipes.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/SelectedRecipes.form
@@ -16,8 +16,9 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-13149860"/>
-          <font name="Bookman Old Style" size="16" style="0"/>
+          <background color="-3735570"/>
+          <font name="Bookman Old Style" size="22" style="0"/>
+          <foreground color="-3735570"/>
           <text value="Recipes"/>
         </properties>
       </component>
